crates/diman_unit_system/tests/compile_fail/resolver_duplicate_definition.stderr
error: Identifier "foo" defined multiple times.
  --> tests/compile_fail/resolver_duplicate_definition.rs:13:10
   |
13 |     unit foo: Length = 10.0 * meters;
   |          ^^^
14 |     unit foo: Length = 20.0 * meters;
   |          ^^^
